--- a/src/assets/style/todo.scss
+++ b/src/assets/style/todo.scss
@@ -32,6 +32,7 @@
       &-icon {
         display: block;
         border-radius: 5px;
+        min-width: 20px;
         width: 20px;
         height: 20px;
         background-color: $gray-100;
